# axelseo

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  start.sh
apps/api/: Dockerfile  alembic.ini  pyproject.toml  render-build.sh  start_worker.sh
apps/api/alembic/: env.py
apps/api/alembic/versions/: 07dc213c3fbe_initial_schema.py  94f54c3c8e82_make_client_org_id_nullable.py  d3f1e731a203_make_audit_project_id_nullable.py  efa8903bce8a_add_desktop_scores_json_to_audit.py
apps/api/app/: main.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: audits.py  clients.py  gsc.py  projects.py
apps/api/app/core/: auth.py  config.py  encryption.py  logging.py
apps/api/app/models/: __init__.py  audit.py  client.py  gsc_data.py  organization.py  project.py  report.py  user.py
apps/api/app/schemas/: audit.py  client.py  gsc.py  project.py
apps/api/app/services/: analyzer.py  crawler.py  gsc.py  lighthouse.py
apps/api/app/worker/: __init__.py  tasks.py  tasks.py.backup
apps/api/tests/: test_health.py
apps/extension/: README.md  package.json  tsconfig.json
apps/extension/.plasmo/: devtools.html  firefox-mv3.plasmo.manifest.json  newtab.html  options.html  popup.html  sidepanel.html
apps/extension/src/: popup.tsx
apps/extension/src/components/: length-bar.tsx  og-preview.tsx  (+2 more)
apps/pdf-generator/: package.json
apps/pdf-generator/src/: index.ts
apps/web/: next.config.js  package.json  tailwind.config.ts
apps/web/src/: middleware.ts
docs/: architecture.md
(+52 files in other folders)
